--- a/3_サーバーサイド基礎/③サーバーサイド言語基礎.md
+++ b/3_サーバーサイド基礎/③サーバーサイド言語基礎.md
@@ -496,7 +496,12 @@ if (!file_exists($data_file)) {
 }
 
 // JSONファイルからデータを読み込み
-$posts = json_decode(file_get_contents($data_file), true);
+$posts = json_decode(file_get_contents('posts.json'), true);
+
+// nullの場合は空の配列にする
+if ($posts === null) {
+    $posts = [];
+}
 
 // 投稿処理
 if ($_SERVER['REQUEST_METHOD'] === 'POST' && isset($_POST['action'])) {
@@ -517,7 +522,7 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST' && isset($_POST['action'])) {
       file_put_contents($data_file, json_encode($posts, JSON_UNESCAPED_UNICODE | JSON_PRETTY_PRINT));
     }
 
-    header('Location: board.php');
+    header('Location: index.php');
     exit;
   }
 
@@ -527,7 +532,7 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST' && isset($_POST['action'])) {
     $posts = array_values($posts);
     file_put_contents($data_file, json_encode($posts, JSON_UNESCAPED_UNICODE | JSON_PRETTY_PRINT));
 
-    header('Location: board.php');
+    header('Location: index.php');
     exit;
   }
 }
