--- a/3_サーバーサイド基礎/③サーバーサイド言語基礎.md
+++ b/3_サーバーサイド基礎/③サーバーサイド言語基礎.md
@@ -616,6 +616,8 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
 // これで二重送信を防ぐ
 ```
 
+### 💻 5-4. 成果物
+[簡易掲示板](https://taiyo8911.cloudfree.jp/myapp/bbs/index.php)
 ---
 
 ## 🏁 ゴール確認チェックリスト
